Better flexibility for serializer